package Diadoc.Api.Proto;

message DateTimeOffsetDto
{
	required sfixed64 UtcTicks = 1;
	required sfixed64 OffsetTicks = 2;
}
